style.css
body {
  background-color: #303030;
  color: black;
}

.viewer-transition {
  transition: all .1s ease;
}

button {
  margin: 0;
  border: 0;
  background-color: white;
}

button:hover {
  color: black;
  cursor: pointer;
}

button,
button:active,
button:focus {
  outline: none;
}

.map {
  position: fixed;
  top: -52px;
  left: 0;
  width: 100vw;
  height: calc(100vh + 108px);
}

.map-switcher {
  display: flex;
  position: fixed;
  z-index: 1000;
  top: 0;
  margin-top: 20px;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  border-radius: 14px;
  background-color: rgba(220, 220, 220, .95);
  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, .3);
}

.map-switcher__button {
  height: 40px;
  padding-right: 40px;
  padding-bottom: 0;
  padding-left: 40px;
  transition: background-color .15s ease;
  border: 0;
  border-bottom: 1px solid transparent;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, .0);
  font-family: sans-serif;
  font-size: 16px;
}

.map-switcher__button:hover {
  border-bottom: 1px solid rgba(0, 0, 0, .15);
  background-color: rgba(255, 255, 255, .7);
}

.map-switcher__button:active,
.map-switcher__button_active {
  border-bottom: 1px solid rgba(0, 0, 0, .25);
  background-color: rgba(255, 255, 255, 1);
  color: black;
  cursor: auto;
}

.map-switcher__button:nth-child(2) {
  margin-right: 5px;
  margin-left: 5px;
}

.zoom {
  position: fixed;
  display: flex;
  flex-direction: column;
  top: 50%;
  left: 24px;
  transform: translate(0, -50%);
  z-index: 1000;
  border-radius: 50px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, .3);
}

.zoom__button {
  width: 45px;
  height: 48px;
  transition: all .1s ease;
  color: rgba(0, 0, 0, .75);
  font-size: 32px;
}

.zoom__button:hover,
.zoom__button:active {
  background-color: #E0E0E0;
}

.zoom__button_plus {
  padding-bottom: 2px;
  border-bottom: 1px solid rgba(0, 0, 0, .2);
  border-radius: 50px 50px 0px 0px;
}

.zoom__button_minus {
  padding-top: 0px;
  padding-bottom: 3px;
  border-radius: 0px 0px 50px 50px;
}

